aligning fixes to issues

--- a/css-build/_sass/base/_appnav.scss
+++ b/css-build/_sass/base/_appnav.scss
@@ -1559,13 +1559,6 @@ div.blogContainer h3.blogHead {
 .vtbegenerated table {font-size: 100% !important; max-width: 99% !important;}
 
 
-/** Date Picker Artefact **/
-a:focus {
-  outline: 1px solid transparent;
-  outline: -webkit-focus-ring-color auto 5px;
-}
-
-
 /** Heading Levels **/
 
 .vtbegenerated {
